--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -301,4 +301,7 @@
     <color name="colorPrimary">@color/redA400</color>
     <color name="colorPrimaryDark">@color/redA700</color>
     <color name="colorAccent">@color/white</color>
+    <color name="textH1">@color/grey800</color>
+    <color name="textH2">@color/grey700</color>
+    <color name="textP">@color/grey700</color>
 </resources>
