--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,12 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="bottom_bar_height">50dp</dimen>
+
+    <dimen name="margin_mid">10dp</dimen>
+    <dimen name="margin_normal">10dp</dimen>
+
+    <dimen name="h1">16sp</dimen>
+    <dimen name="h2">14sp</dimen>
+    <dimen name="p">12sp</dimen>
 </resources>
