--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <LinearLayout
         style="@style/div.vlist"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp">
+
         <ImageView
             android:id="@+id/category_image"
             android:layout_width="36dp"
@@ -11,11 +15,11 @@
 
         <TextView
             android:id="@+id/category_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/div.p.small"
             android:gravity="center"
             android:lines="2"
             android:ellipsize="end"
             android:text=""/>
+
     </LinearLayout>
 </layout>
