--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <!-- color palette -->
     <color name="white">#ffffff</color>
+    <color name="white_semi_ee">#eeffffff</color>
     <color name="white_semi_cc">#ccffffff</color>
     <color name="white_semi_bb">#bbffffff</color>
     <color name="white_semi_aa">#aaffffff</color>
@@ -301,7 +302,7 @@
     <color name="colorPrimary">@color/redA400</color>
     <color name="colorPrimaryDark">@color/redA700</color>
     <color name="colorAccent">@color/white</color>
-    <color name="textH1">@color/grey800</color>
-    <color name="textH2">@color/grey700</color>
-    <color name="textP">@color/grey700</color>
+    <color name="textH1">@color/grey900</color>
+    <color name="textH2">@color/grey800</color>
+    <color name="textP">@color/grey800</color>
 </resources>
