--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,10 @@
         <item name="android:textSize">@dimen/p</item>
     </style>
 
+    <style name="div.p.small" parent="div.p">
+        <item name="android:textSize">@dimen/p</item>
+    </style>
+
     <style name="div.vlist.item" parent="div.vlist">
         <item name="android:padding">@dimen/margin_normal</item>
         <item name="android:layout_marginBottom">@dimen/margin_mid</item>
@@ -46,5 +50,10 @@
     <style name="div.hlist.item" parent="div.hlist">
         <item name="android:padding">@dimen/margin_normal</item>
         <item name="android:layout_marginBottom">@dimen/margin_mid</item>
+    </style>
+
+    <style name="div.divider" parent="div">
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/grey400</item>
     </style>
 </resources>
