--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,61 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <android.support.design.widget.CoordinatorLayout
+    <RelativeLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:focusableInTouchMode="true">
-
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:id="@+id/toolbar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimaryDark"
-                app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-                <ImageView
-                    android:id="@+id/toolbar_backdrop"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_margin="10dp"
-                    android:scaleType="fitXY"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/logo"
-                    android:tint="@color/white"
-                    app:layout_collapseMode="parallax" />
-
-            </android.support.design.widget.CollapsingToolbarLayout>
-
-            <android.support.v7.widget.SearchView
-                android:id="@+id/home_searchview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/actionbar"
-                app:theme="@style/actionbar"
-                android:iconifiedByDefault="false"
-                app:iconifiedByDefault="false"
-                android:queryHint="@string/search_hint"
-                app:queryHint="@string/search_hint"
-                app:searchHintIcon="@mipmap/ic_search"
-                app:searchIcon="@mipmap/ic_search"
-                app:closeIcon="@mipmap/ic_close"/>
-        </android.support.design.widget.AppBarLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/home_listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/bottom_bar_height"
-            android:background="@color/white"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="com.mintminter.bottomtab.MainActivity">
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/home_navigation"
@@ -68,6 +19,15 @@
             android:background="?android:attr/windowBackground"
             app:menu="@menu/menu_navigation" />
 
-    </android.support.design.widget.CoordinatorLayout>
+        <FrameLayout
+            android:id="@+id/home_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/bottom_bar_height">
+
+
+        </FrameLayout>
+
+    </RelativeLayout>
 </layout>
 
