show categories in a dialog instead of an activity

--- a/app/src/main/res/layout/dialog_category.xml
+++ b/app/src/main/res/layout/dialog_category.xml
@@ -3,12 +3,15 @@
     <RelativeLayout
         android:id="@+id/category_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@color/black_trans">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/category_list"
             style="@style/div"
             android:layout_margin="@dimen/margin_normal"
+            android:paddingBottom="@dimen/margin_mid"
+            android:paddingTop="@dimen/margin_mid"
             android:background="@color/white"
             android:layout_centerInParent="true"/>
 
