finish get recommend events by category

--- a/app/src/main/res/layout/activity_recommendevents.xml
+++ b/app/src/main/res/layout/activity_recommendevents.xml
@@ -57,6 +57,10 @@
 
         </LinearLayout>
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recommendevents_list"
+            style="@style/div"/>
+
     </LinearLayout>
 
 </layout>
