--- a/app/src/main/res/layout/activity_recommendevents.xml
+++ b/app/src/main/res/layout/activity_recommendevents.xml
@@ -29,8 +29,10 @@
                     android:id="@+id/recommendevents_category_icon"
                     android:layout_width="@dimen/icon_default"
                     android:layout_height="@dimen/icon_default"
+                    android:padding="@dimen/margin_small"
                     android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:background="@mipmap/ic_round"/>
 
                 <ImageView
                     android:id="@+id/recommendevents_category_down"
