--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,8 @@
     <dimen name="bottom_bar_height">50dp</dimen>
     <dimen name="toolbar_height">56dp</dimen>
 
-    <dimen name="margin_mid">10dp</dimen>
+    <dimen name="margin_small">2dp</dimen>
+    <dimen name="margin_mid">5dp</dimen>
     <dimen name="margin_normal">10dp</dimen>
 
     <dimen name="h1">16sp</dimen>
@@ -16,4 +17,5 @@
 
     <dimen name="icon_default">36dp</dimen>
     <dimen name="icon_small">24dp</dimen>
+    <dimen name="icon_tiny">16dp</dimen>
 </resources>
