--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="bottom_bar_height">50dp</dimen>
     <dimen name="toolbar_height">56dp</dimen>
+    <dimen name="event_height">100dp</dimen>
 
     <dimen name="margin_small">2dp</dimen>
     <dimen name="margin_mid">5dp</dimen>
