--- a/app/src/main/res/drawable/bg_searchview.xml
+++ b/app/src/main/res/drawable/bg_searchview.xml
@@ -3,11 +3,15 @@
     <item android:state_pressed="true" >
         <shape>
             <solid android:color="@color/colorPrimaryDark" />
+            <stroke android:color="@color/red300" android:width="1dp"/>
+            <corners android:radius="18dp"/>
         </shape>
     </item>
     <item>
         <shape>
             <solid android:color="@color/colorPrimary" />
+            <stroke android:color="@color/red300" android:width="1dp"/>
+            <corners android:radius="18dp"/>
         </shape>
     </item>
 </selector>
