--- a/app/src/main/res/layout/layout_searchview.xml
+++ b/app/src/main/res/layout/layout_searchview.xml
@@ -5,12 +5,15 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/action_bar_height"
+        android:gravity="center_vertical"
+        android:background="@color/colorPrimary"
+        android:paddingRight="@dimen/margin_normal">
 
         <android.support.v7.widget.SearchView
             android:id="@+id/searchview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/icon_default"
             android:theme="@style/actionbar"
             app:theme="@style/actionbar"
             android:iconifiedByDefault="false"
@@ -19,7 +22,8 @@
             app:queryHint="@string/search_hint"
             app:searchHintIcon="@mipmap/ic_search"
             app:searchIcon="@mipmap/ic_search"
-            app:closeIcon="@mipmap/ic_close"/>
+            app:closeIcon="@mipmap/ic_close"
+            app:queryBackground="@drawable/bg_searchview"/>
 
     </LinearLayout>
 
