--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="action_bar_height">56dp</dimen>
     <dimen name="bottom_bar_height">50dp</dimen>
     <dimen name="toolbar_height">56dp</dimen>
     <dimen name="event_height">100dp</dimen>
