Added BaseModelListFragment and endless scroll (pagination) support for Nearby fragment

--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -4,28 +4,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.supermeetup.supermeetup.fragment.EventListFragment">
+        android:id="@+id/llEventList"
+        android:orientation="vertical"
+        tools:context="com.supermeetup.supermeetup.fragment.BaseModelListFragment">
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/llEventList"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/swipeContainer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rvEvents"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="@dimen/bottom_bar_height"
-                    android:background="@color/white"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-            </android.support.v4.widget.SwipeRefreshLayout>
-        </LinearLayout>
-
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvEvents"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/bottom_bar_height"
+                android:background="@color/white"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 </layout>
