--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,8 @@
             android:id="@+id/home_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/bottom_bar_height">
+            android:layout_above="@id/home_navigation"
+            android:layout_alignParentTop="true">
 
 
         </FrameLayout>
