--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,8 @@
     <dimen name="p">12sp</dimen>
     <dimen name="p.small">10sp</dimen>
 
+    <dimen name="icon_profile">72dp</dimen>
+    <dimen name="icon_big">64dp</dimen>
     <dimen name="icon_default">36dp</dimen>
     <dimen name="icon_small">24dp</dimen>
     <dimen name="icon_tiny">16dp</dimen>
