--- a/app/src/main/res/layout/item_profilerecommendevent.xml
+++ b/app/src/main/res/layout/item_profilerecommendevent.xml
@@ -14,6 +14,13 @@
             style="@style/div.h1"
             android:text="@string/recommendevent"/>
 
+        <ImageView
+            android:id="@+id/shake_recommendevent_image"
+            style="@style/div"
+            android:layout_marginTop="@dimen/margin_mid"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"/>
+
         <TextView
             android:id="@+id/shake_recommendevent_name"
             style="@style/div.h2"
@@ -31,6 +38,14 @@
             style="@style/div.p"
             android:layout_marginTop="@dimen/margin_mid"
             android:text="@{event.getEventTime()}"/>
+
+        <TextView
+            android:id="@+id/shake_recommendevent_des"
+            style="@style/div.p"
+            android:layout_marginTop="@dimen/margin_mid"
+            android:maxLines="3"
+            android:ellipsize="end"
+            android:text="@{event.plainTextNoImagesDescription}"/>
 
     </LinearLayout>
 </layout>
