--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -31,10 +31,12 @@
 
         </RelativeLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/find_list"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@style/div"/>
+            android:id="@+id/find_list"
+            style="@style/div">
+        </FrameLayout>
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/find_map"
