--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -2,8 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android" >
     <RelativeLayout
         style="@style/div"
-        android:layout_height="@dimen/event_height"
-        android:background="@color/white">
+        android:layout_height="@dimen/event_height">
 
         <ImageView
             android:id="@+id/event_image"
@@ -14,69 +13,89 @@
             android:scaleType="centerCrop"
             android:src="@drawable/logo"/>
 
-        <RelativeLayout
+        <LinearLayout
             style="@style/div.vlist"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:gravity="left|center_vertical"
-            android:paddingTop="@dimen/margin_mid"
-            android:paddingBottom="@dimen/margin_mid"
-            android:paddingLeft="@dimen/margin_normal"
-            android:paddingRight="@dimen/margin_normal"
-            android:background="#efffffff">
+            android:gravity="left|bottom"
+            android:background="@color/white_semi_cc">
 
             <LinearLayout
-                android:id="@+id/event_address_layout"
-                style="@style/div.hlist"
-                android:gravity="top"
-                android:layout_alignParentBottom="true" >
+                style="@style/div.vlist"
+                android:paddingTop="@dimen/margin_mid"
+                android:paddingBottom="@dimen/margin_mid"
+                android:paddingLeft="@dimen/margin_normal"
+                android:paddingRight="@dimen/margin_normal"
+                android:background="@drawable/bg_groupimage"
+                android:gravity="left|bottom">
 
-                <ImageView
-                    android:layout_width="@dimen/icon_tiny"
-                    android:layout_height="@dimen/icon_tiny"
-                    android:src="@mipmap/ic_location"
-                    android:tint="@color/colorPrimary"
-                    android:layout_marginRight="@dimen/margin_mid"/>
                 <TextView
-                    android:id="@+id/event_address"
-                    android:lines="1"
+                    android:id="@+id/event_name"
+                    style="@style/div.h1"
+                    android:gravity="center_vertical"
+                    android:maxLines="2"
                     android:ellipsize="end"
-                    android:gravity="top"
-                    style="@style/div.p"/>
+                    android:text="title"/>
+
+                <LinearLayout
+                    style="@style/div.hlist"
+                    android:layout_marginTop="@dimen/margin_mid">
+
+                    <ImageView
+                        android:layout_width="@dimen/icon_tiny"
+                        android:layout_height="@dimen/icon_tiny"
+                        android:src="@mipmap/ic_clock"
+                        android:tint="@color/colorPrimary"
+                        android:layout_marginRight="@dimen/margin_mid"/>
+                    <TextView
+                        android:id="@+id/event_time"
+                        style="@style/div.h2"
+                        android:lines="1"
+                        android:ellipsize="end"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/div.hlist"
+                    android:layout_marginTop="@dimen/margin_mid">
+
+                    <ImageView
+                        android:layout_width="@dimen/icon_tiny"
+                        android:layout_height="@dimen/icon_tiny"
+                        android:src="@mipmap/ic_group"
+                        android:tint="@color/colorPrimary"
+                        android:layout_marginRight="@dimen/margin_mid"/>
+                    <TextView
+                        android:id="@+id/event_group"
+                        style="@style/div.h2"
+                        android:lines="1"
+                        android:ellipsize="end"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/event_address_layout"
+                    style="@style/div.hlist"
+                    android:layout_marginTop="@dimen/margin_mid">
+
+                    <ImageView
+                        android:layout_width="@dimen/icon_tiny"
+                        android:layout_height="@dimen/icon_tiny"
+                        android:src="@mipmap/ic_location"
+                        android:tint="@color/colorPrimary"
+                        android:layout_marginRight="@dimen/margin_mid"/>
+                    <TextView
+                        android:id="@+id/event_address"
+                        android:lines="1"
+                        android:ellipsize="end"
+                        android:gravity="top"
+                        style="@style/div.p"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/event_name"
-                style="@style/div.h1"
-                android:layout_alignParentTop="true"
-                android:gravity="top"
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:text="title"/>
-
-            <LinearLayout
-                style="@style/div.hlist"
-                android:gravity="bottom"
-                android:layout_marginBottom="@dimen/margin_mid"
-                android:layout_below="@id/event_name"
-                android:layout_above="@id/event_address_layout">
-
-                <ImageView
-                    android:layout_width="@dimen/icon_tiny"
-                    android:layout_height="@dimen/icon_tiny"
-                    android:src="@mipmap/ic_group"
-                    android:tint="@color/teal700"
-                    android:layout_marginRight="@dimen/margin_mid"/>
-                <TextView
-                    android:id="@+id/event_group"
-                    style="@style/div.h2"
-                    android:lines="1"
-                    android:ellipsize="end"/>
-
-            </LinearLayout>
-
-        </RelativeLayout>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/event_divider"
